--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,12 +5,13 @@
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
-    tools:context=".LogIn.LoginFragment">
+    tools:context=".Interfaces.LogIn.LoginFragment">
 
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="centerCrop"
+        android:tint="#1F000000"
         android:src="@drawable/green_garden"/>
 
     <ScrollView
@@ -20,7 +21,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:paddingTop="24dp"
             android:paddingLeft="24dp"
             android:paddingRight="24dp">
@@ -29,7 +30,8 @@
                 android:id="@+id/login_settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:contentDescription="@string/configuracion"
                 android:background="@drawable/gear"/>
 
             <com.google.android.material.textview.MaterialTextView
@@ -37,10 +39,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
                 android:layout_marginBottom="40dp"
+                android:shadowColor="@color/negro"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="1"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="sans-serif-thin"
                 android:textSize="12pt"
-                android:textColor="#9AFFFFFF"
+                android:textColor="@color/blancoPerla"
                 android:text="@string/tittle"
                 />
 
@@ -53,7 +59,7 @@
                 android:layout_marginBottom="8dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_email_logIn"
+                    android:id="@+id/login_usuario_et"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textEmailAddress"
@@ -72,7 +78,7 @@
                 android:layout_marginBottom="8dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_password_logIn"
+                    android:id="@+id/login_password_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -82,11 +88,13 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/material_button"
+                android:id="@+id/login_acceder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
+                android:background="@drawable/cut_shape"
                 style="@style/Button"
+                app:shapeAppearance="@style/ButtonTopLeftEdgeCut"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/acceder"/>
         </LinearLayout>
