--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="blancoPerla">#eeebd9</color>
     <color name="blanco">#FFFFFF</color>
+    <color name="gris">#B3B3B3</color>
+    <color name="negro">#000000</color>
+    <color name="verdeBebe">#CEF7CD</color>
+    <color name="amarilloBebe">#F7F0BA</color>
 </resources>
