--- a/app/src/main/res/layout/fragment_menu_navigation_header.xml
+++ b/app/src/main/res/layout/fragment_menu_navigation_header.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:background="@color/colorPrimary"
+    android:layout_height="120dp"
+    android:background="@color/verdeSIM"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="4dp"
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nav_header_correo"
-        android:textSize="6pt"
+        android:textSize="14dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
         android:text="@string/app_name"
-        android:textSize="6pt"
+        android:textSize="14dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_above="@+id/nav_header_correo"
         android:layout_alignLeft="@+id/nav_header_correo"
