--- a/app/src/main/res/layout/fragment_pendientes.xml
+++ b/app/src/main/res/layout/fragment_pendientes.xml
@@ -18,7 +18,6 @@
             android:layout_alignParentStart="true"
             android:background="@color/colorPrimary"
             style="@style/TextField"
-            android:textColor="@color/blanco"
             android:text="@string/entradas_rv_cabecera"
             />
 
@@ -44,7 +43,6 @@
                 android:gravity="center_horizontal"
                 android:background="@color/colorPrimary"
                 style="@style/TextField"
-                android:textColor="@color/blanco"
                 android:text="@string/entradas_rv_pdtes_col1"
                 />
 
@@ -60,7 +58,6 @@
                 android:gravity="center_horizontal"
                 android:background="@color/colorPrimary"
                 style="@style/TextField"
-                android:textColor="@color/blanco"
                 android:text="@string/entradas_rv_pdtes_col2"
                 />
 
@@ -76,7 +73,6 @@
                 android:gravity="center_horizontal"
                 android:background="@color/colorPrimary"
                 style="@style/TextField"
-                android:textColor="@color/blanco"
                 android:text="@string/entradas_rv_pdtes_col3"
                 />
 
@@ -92,7 +88,6 @@
                 android:gravity="center_horizontal"
                 android:background="@color/colorPrimary"
                 style="@style/TextField"
-                android:textColor="@color/blanco"
                 android:text="@string/entradas_rv_pdtes_col4"
                 />
         </LinearLayout>
@@ -101,7 +96,6 @@
             android:id="@+id/pendientes_rv"
             android:layout_below="@id/pendientes_columnas"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/verdeBebe"/>
+            android:layout_height="match_parent"/>
     </RelativeLayout>
 </FrameLayout>
