--- a/app/src/main/res/layout/fragment_producto.xml
+++ b/app/src/main/res/layout/fragment_producto.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/verdeBebe"
     tools:context=".Interfaces.Entradas.ProductoFragment">
 
     <RelativeLayout
@@ -17,13 +16,13 @@
             android:layout_alignParentStart="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12pt"
+            android:textSize="22dp"
             android:gravity="center_horizontal"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:layout_marginBottom="10dp"
             android:elevation="6dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/verdeSIM"
             style="@style/TextField"
             android:text="@string/anyadirProducto_lblTitulo"/>
 
@@ -167,24 +166,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="60dp"
-            android:layout_alignParentBottom="true">
+            android:layout_marginTop="100dp"
+            android:layout_below="@+id/anyadirProducto_linear_udsRecibidas">
 
             <ImageButton
                 android:id="@+id/anyadirProducto_aceptar_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/negro"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/check"/>
+                android:backgroundTint="@color/transparente"
+                android:layout_marginRight="25dp"
+                android:src="@drawable/check_64dp"/>
 
             <ImageButton
                 android:id="@+id/anyadirProducto_cancelar_btn"
                 android:layout_width="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/negro"
-                android:src="@drawable/cancel"/>
+                android:backgroundTint="@color/transparente"
+                android:src="@drawable/remove_64dp"/>
         </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
