--- a/app/src/main/res/layout/viewholder_autocomplete_product.xml
+++ b/app/src/main/res/layout/viewholder_autocomplete_product.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:textSize="12pt"
+        android:textSize="20dp"
         style="@style/TextField"/>
 
     <View
@@ -24,6 +24,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:textSize="12pt"
+        android:textSize="20dp"
         style="@style/TextField"/>
 </LinearLayout>
