--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="verdeSIMBebe">#D8FFB1</color>
     <color name="amarilloBebe">#F7F0BA</color>
     <color name="transparente">#0000ffcc</color>
+    <color name="transparente2">#00ff001C</color>
 
     <color name="verdeSIM">#8CD600</color>
     <color name="grisSIM">#63666A</color>
