--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -32,7 +32,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:contentDescription="@string/configuracion"
-                android:background="@drawable/gear"/>
+                android:src="@drawable/settings_36dp"
+                android:background="#00ff001C"/>
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
